# Teradata

./: README.md  pyproject.toml
TeradataGE/: configure.py  install_db_objects.py  requirements.txt  td_graph_function.py
TeradataGE/SP/: drop_vt_sp.sql  graph_path_decode_sp.sql  graph_shortest_path_sp.sql  graph_topology_sp.sql
